@@ -1,0 +1,258 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3DataStructure>
+	<meta type="array">
+		<langDisable type="integer">1</langDisable>
+	</meta>
+	<sheets>
+		<sDEF>
+			<ROOT>
+				<TCEforms>
+					<sheetTitle>LLL:EXT:kb_kickstarter/llxml/locallang_db_fields.xml:xml.sheet.basic</sheetTitle>
+				</TCEforms>
+				<type>array</type>
+				<el>
+					<relationType type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field__relationType</label>
+							<config>
+								<type>select</type>
+								<size>1</size>
+								<items>
+									<numIndex index="1" type="array">
+										<numIndex index="0">LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field__relationType_group</numIndex>
+										<numIndex index="1">group</numIndex>
+									</numIndex>
+									<numIndex index="2" type="array">
+										<numIndex index="0">LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field__relationType_select</numIndex>
+										<numIndex index="1">select</numIndex>
+									</numIndex>
+								</items>
+								<default>group</default>
+							</config>
+						</TCEforms>
+					</relationType>
+					<size type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.size</label>
+							<config>
+								<type>input</type>
+								<size>10</size>
+								<eval>int</eval>
+								<default>5</default>
+							</config>
+						</TCEforms>
+					</size>
+					<autoSizeMax type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.autoSizeMax</label>
+							<config>
+								<type>input</type>
+								<size>10</size>
+								<eval>int</eval>
+								<checkbox>0</checkbox>
+								<default>0</default>
+							</config>
+						</TCEforms>
+					</autoSizeMax>
+					<allowed type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.allowed</label>
+							<config>
+								<type>select</type>
+								<size>10</size>
+								<autoSizeMax>15</autoSizeMax>
+								<special>tables</special>
+								<show_thumbs>1</show_thumbs>
+								<maxitems>1</maxitems>
+								<minitems>1</minitems>
+							</config>
+						</TCEforms>
+					</allowed>
+					<pages type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.pages</label>
+							<config>
+								<type>group</type>
+								<internal_type>db</internal_type>
+								<allowed>pages</allowed>
+								<size>10</size>
+								<autoSizeMax>15</autoSizeMax>
+								<show_thumbs>1</show_thumbs>
+								<maxitems>20</maxitems>
+								<minitems>0</minitems>
+							</config>
+						</TCEforms>
+					</pages>
+					<same_page type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.same_page</label>
+							<config>
+								<type>check</type>
+							</config>
+						</TCEforms>
+					</same_page>
+					<maxitems type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.maxitems</label>
+							<config>
+								<type>input</type>
+								<size>10</size>
+								<eval>int</eval>
+								<default>0</default>
+								<checkbox>0</checkbox>
+							</config>
+						</TCEforms>
+					</maxitems>
+					<minitems type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.minitems</label>
+							<config>
+								<type>input</type>
+								<size>10</size>
+								<eval>int</eval>
+								<default>0</default>
+								<checkbox>0</checkbox>
+							</config>
+						</TCEforms>
+					</minitems>
+					<multiple type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.multiple</label>
+							<config>
+								<type>check</type>
+							</config>
+						</TCEforms>
+					</multiple>
+					<show_thumbs type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.show_thumbs</label>
+							<config>
+								<type>check</type>
+							</config>
+						</TCEforms>
+					</show_thumbs>
+				</el>
+			</ROOT>
+		</sDEF>
+		<sheet_advanced>
+			<ROOT>
+				<TCEforms>
+					<sheetTitle>LLL:EXT:kb_kickstarter/llxml/locallang_db_fields.xml:xml.sheet.advanced</sheetTitle>
+				</TCEforms>
+				<type>array</type>
+				<el>
+					<useMM type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.useMM</label>
+							<config>
+								<type>check</type>
+								<default>1</default>
+								<readOnly>1</readOnly>
+							</config>
+						</TCEforms>
+					</useMM>
+					<fieldMatching type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.fieldMatching</label>
+							<config>
+								<type>select</type>
+								<size>1</size>
+								<items>
+									<numIndex index="0" type="array">
+										<numIndex index="0">None</numIndex>
+										<numIndex index="1"></numIndex>
+									</numIndex>
+								</items>
+								<itemsProcFunc>EXT:kb_kickstarter/class.tx_kbkickstarter_itemsProc.php:&amp;tx_kbkickstarter_itemsProc-&gt;tableFields</itemsProcFunc>
+								<foreignTableField>allowed</foreignTableField>
+							</config>
+						</TCEforms>
+					</fieldMatching>
+					<fieldSorting type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.fieldSorting</label>
+							<config>
+								<type>select</type>
+								<size>5</size>
+								<maxitems>4</maxitems>
+								<itemsProcFunc>EXT:kb_kickstarter/class.tx_kbkickstarter_itemsProc.php:&amp;tx_kbkickstarter_itemsProc-&gt;tableFields</itemsProcFunc>
+								<foreignTableField>allowed</foreignTableField>
+								<foreignSorting>1</foreignSorting>
+								<labelASC>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.fieldSorting.ASC</labelASC>
+								<labelDESC>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.fieldSorting.DESC</labelDESC>
+							</config>
+						</TCEforms>
+					</fieldSorting>
+					<readOnly type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/llxml/locallang_db_fields.xml:xml.field_readOnly</label>
+							<config>
+								<type>check</type>
+							</config>
+						</TCEforms>
+					</readOnly>
+					<extraElements type="array">
+						<type>array</type>
+						<section>1</section>
+						<el type="array">
+							<extraElement type="array">
+								<type>array</type>
+								<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field__extraElement</label>
+								<tx_templavoila type="array">
+								<title>Extra element</title>
+								</tx_templavoila>
+								<el type="array">
+									<label type="array">
+										<TCEforms>
+											<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field__extraElement__label</label>
+											<config>
+												<type>input</type>
+												<size>30</size>
+												<max>250</max>
+											</config>
+										</TCEforms>
+									</label>
+									<value type="array">
+										<TCEforms>
+											<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field__extraElement__value</label>
+											<config>
+												<type>input</type>
+												<size>30</size>
+												<max>250</max>
+											</config>
+										</TCEforms>
+									</value>
+								</el>
+							</extraElement>
+						</el>
+					</extraElements>
+					<styleSelected type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.styleSelected</label>
+							<config>
+								<type>input</type>
+							</config>
+						</TCEforms>
+					</styleSelected>
+					<styleAvailable type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.styleAvailable</label>
+							<config>
+								<type>input</type>
+							</config>
+						</TCEforms>
+					</styleAvailable>
+					<itemsProcFunc type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml:field.itemsProcFunc</label>
+							<config>
+								<type>input</type>
+							</config>
+						</TCEforms>
+					</itemsProcFunc>
+				</el>
+			</ROOT>
+		</sheet_advanced>
+		<sheet_language>EXT:kb_kickstarter/fieldTypes/_basics/sheet_language.xml</sheet_language>
+	</sheets>
+</T3DataStructure>
