@@ -1,0 +1,66 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<description>Property labels for kb_kickstart property "inverse_db_relation"</description>
+		<type>database</type>
+		<csh_table></csh_table>
+		<fileId>EXT:kb_kickstarter/fieldTypes/inverse_db_relation/locallang.xml</fileId>
+		<labelContext type="array">
+			<label index="property_name"></label>
+			<label index="field.size"></label>
+			<label index="field.autoSizeMax"></label>
+			<label index="field.allowed"></label>
+			<label index="field.pages"></label>
+			<label index="field.maxitems"></label>
+			<label index="field.minitems"></label>
+			<label index="field.multiple"></label>
+			<label index="field.show_thumbs"></label>
+			<label index="field.useMM"></label>
+			<label index="field.fieldMatching"></label>
+			<label index="field.fieldSorting"></label>
+			<label index="field.fieldSorting.ASC"></label>
+			<label index="field.fieldSorting.DESC"></label>
+			<label index="field.readOnly"></label>
+			<label index="field.styleSelected"></label>
+			<label index="field.styleAvailable"></label>
+			<label index="field.itemsProcFunc"></label>
+			<label index="field__relationType"></label>
+			<label index="field__relationType_group"></label>
+			<label index="field__relationType_select"></label>
+			<label index="field__extraElement"></label>
+			<label index="field__extraElement__label"></label>
+			<label index="field__extraElement__value"></label>
+		</labelContext>
+		<ext_filename_template>EXT:csh_###LANGKEY###/kb_kickstarter/fieldTypes/inverse_db_relation/###LANGKEY###.locallang.xml</ext_filename_template>
+		<keep_original_text type="integer">1</keep_original_text>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="property_name">Inverse Database relation</label>
+			<label index="field.size">Selector height</label>
+			<label index="field.autoSizeMax">Maximal selector height</label>
+			<label index="field.allowed">Allowed tables</label>
+			<label index="field.pages">Records on pages</label>
+			<label index="field.same_page">Records on same page</label>
+			<label index="field.maxitems">Maximal items</label>
+			<label index="field.minitems">Minimal items</label>
+			<label index="field.multiple">Allow same items more than once</label>
+			<label index="field.show_thumbs">Show thumbnails</label>
+			<label index="field.useMM">Use MM relation (a must for inverse Relations)</label>
+			<label index="field.fieldMatching">Foreign table field used for inverse relation</label>
+			<label index="field.fieldSorting">Sort field for foreign records</label>
+			<label index="field.fieldSorting.ASC">Ascending: </label>
+			<label index="field.fieldSorting.DESC">Descending: </label>
+			<label index="field.readOnly">Read-only</label>
+			<label index="field.styleSelected">Style: Selected box</label>
+			<label index="field.styleAvailable">Style: Available box</label>
+			<label index="field.itemsProcFunc">Item processing function</label>
+			<label index="field__relationType">Type of relation field</label>
+			<label index="field__relationType_group">Group field</label>
+			<label index="field__relationType_select">Select box</label>
+			<label index="field__extraElement">Extra element</label>
+			<label index="field__extraElement__label">Label</label>
+			<label index="field__extraElement__value">Value</label>
+		</languageKey>
+	</data>
+</T3locallang>
